Deleted unecessary images

--- a/landing2.jade
+++ b/landing2.jade
@@ -57,13 +57,22 @@ html
       section#hero.hero.slider
         ul.slides
           li
+            img(src="img/mani.png", alt="Banner 1")
+            .caption.center-align
+          li
+            img(src="img/fashion.jpg", alt="Banner 1")
+            .caption.center-align
+          li
             img(src="img/color.jpg", alt="Banner 1")
             .caption.center-align
           li
-            img(src="img/retouch_banner.jpg", alt="Banner 1")
+            img(src="img/retouch_banner.jpeg", alt="Banner 1")
             .caption.center-align
           li
-            img(src="img/mani.png", alt="Banner 1")
+            img(src="img/color_2.png", alt="Banner 1")
+            .caption.center-align
+          li
+            img(src="img/bw_banner.jpg", alt="Banner 1")
             .caption.center-align
         .hero-title.white-text.center
           h1.center.word-switch
