--- a/index.jade
+++ b/index.jade
@@ -1,17 +1,22 @@
 doctype html
 html
     head
-        title Bildbearbeitung und Manipulation für Sie
+        title Refactory - Bildbearbeitung und Manipulation für Sie
         link(rel="stylesheet", href="css/materialize.css")
         link(rel="stylesheet", href="css/style.css" media="all")
         meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
         script(type="application/x-javascript").
             addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
         link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800", type="text/css")
+        link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
+        link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css")
         script(src="js/jquery.min.js")
+        script(src="js/modernizr.js")
+        script(src="js/materialize.js")
         script(src="js/move-top.js", type="text/javascript")
         script(src="js/easing.js", type="text/javascript")
         script(src="js/responsiveslides.min.js")
+        script(src="js/scripts.js")
         script(type='text/javascript').
             $(function () {
               $("#slider1").responsiveSlides({
@@ -20,150 +25,207 @@ html
                  speed: 500,
                  namespace: "callbacks",
               });
+              $('.parallax').parallax();
+              $('.scrollspy').scrollSpy();
+              $('.modal-trigger').leanModal();
+              $('.slider').slider({
+                full_width: true,
+                height: 800,
+                indicators: false
+                  });
             });
 
-    body
-        .header
-            .slider
-                ul.rslides#slider1
-                    li
-                        img(src="img/banner.jpg", alt="Orion Bildbearbeitung")
-                        .header-matter
-                            h2 we. make
-                            label.make
-                            .matter-we
-                                a.we-better(href="#")
-                                    span  
-                                .better
-                                    h4 Your
-                                    label Business Better
-                                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                .clearfix
-        // END Header
+    body#top.scrollspy
 
-        .top-header
-            .container
-                .logo
-                    a(href="#")
-                        img(src="img/logo.png", alt="Orion Logo")
-                .top-nav
-                    label.menu
-                    ul
-                        li.active
-                            a.scroll(href="#home") Home
-                                span.home
-                        li
-                            a.scroll(href="#home") About
-                                span.home
-                        li
-                            a.scroll(href="#home") Contact
-                                span.home
-                    script(type='text/javascript').
-                        $("label.menu").click(function(){
-                            $(".top-nav ul").slideToggle(700, function(){
-                            });
-                        });
-                    script(type='text/javascript').
-                        jQuery(document).ready(function($) {
-                            $(".scroll").click(function(event){     
-                                event.preventDefault();
-                                $('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
-                            });
-                        });
-                .clearfix
-        // END Top-Header
+      .navbar-fixed
+        nav
+          .nav-wrapper
+            a.brand-logo(href="#") Refactory
+            ul#nav-mobile.right.hide-on-med-and-down
+              li
+                a(href="#intro") About
+              li
+                a(href="#retouch") Retouch
+              li
+                a(href="#manipulation") Manipulation
+              li
+                a(href="#color") Styling
+              li
+                a(href="#contact") Contact
 
-        .content
-            .global-design#about
-                .container
-                    .idea-get
-                        a(href="#")
-                            img(src="img/ca.png", alt="")
-                            h4 GET IDEA
-                            p Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    .idea-get
-                        a(href="#")
-                            img(src="img/gla.png", alt="")
-                            h4 GET IDEA
-                            p Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    .idea-get.we-get-grid
-                        a(href="#")
-                            img(src="img/glo.png", alt="")
-                            h4 GET IDEA
-                            p Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    .clearfix
-            // END About
+      // HERO
+      section#hero.hero.slider
+        ul.slides
+          li
+            img(src="img/mani.png", alt="Banner 1")
+            .caption.center-align
+          li
+            img(src="img/fashion.jpg", alt="Banner 1")
+            .caption.center-align
+          li
+            img(src="img/color.jpg", alt="Banner 1")
+            .caption.center-align
+          li
+            img(src="img/retouch_banner.jpeg", alt="Banner 1")
+            .caption.center-align
+          li
+            img(src="img/color_2.png", alt="Banner 1")
+            .caption.center-align
+          li
+            img(src="img/bw_banner.jpg", alt="Banner 1")
+            .caption.center-align
+        .hero-title.white-text.center
+          h1.center.word-switch
+            .words-left
+              span We provide image
+            .words-right
+              ul.words-wrapper
+                li.word retouching
+                li.word manipulation
+                li.word styling
+                li.word restoration
+      // END Hero
+      
+      // Intro
+      section#intro.scrollspy.grey.lighten-3.clearfix
+        .container
+          .row
+            .col.s12
+              h3.center.header Lorem ipsum dolor sit amet, consectetur adipiscing elit. <span class="span_h2"> Phasellus  </span>vestibulum lorem risus, nec suscipit lorem <span class="span_h2"> laoreet quis.</span> </h2>
+            .col.s12.m4
+              a.center.promo.promo-example.card.white.waves-effect.waves-red.hoverable(href="#retouch")
+                i.medium.material-icons brush
+                h5.promo-caption Retouching
+                p.light.center Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Cum sociis natoque penatibus et magnis dis parturient montes.
+            .col.s12.m4
+              a.center.promo.promo-example.card.white.waves-effect.waves-red.hoverable(href="#manipulation")
+                i.medium.material-icons blur_linear
+                h5.promo-caption Manipulation
+                p.light.center Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Cum sociis natoque penatibus et magnis dis parturient montes.
+            .col.s12.m4
+              a.center.promo.promo-example.card.white.waves-effect.waves-red.hoverable(href="#color")
+                i.medium.material-icons invert_colors
+                h5.promo-caption Styling
+                p.light.center Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Cum sociis natoque penatibus et magnis dis parturient montes.
+      // END Intro
 
-            .portfolio#portfolio
-                .container
-                    .portfolio-top
-                        h3 SHOWCASING YOUR PORTFOLIO
-                        img.img-responsive.line-grid(src="img/li-1.png", alt="")
-                        p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <a class="base-line" href="#">incididunt ut labore</a> et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <a class="base-line" href="#">exercitation</a> ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    .portfolio-bottom
-                        .portfolio-tin
-                            img.img-responsive.phone-red(src="img/1.jpg", alt="")
-                            .arrow-place
-                                p placerat ligula tincidunt
-                                span  
-                        .portfolio-tin
-                            img.img-responsive.phone-red(src="img/2.jpg", alt="")
-                            .arrow-place
-                                p placerat ligula tincidunt
-                                span  
-                        .portfolio-tin
-                            img.img-responsive.phone-red(src="img/3.jpg", alt="")
-                            .arrow-place
-                                p placerat ligula tincidunt
-                                span  
-            // END Portfolio
-            
-            // Image Spacer
-            .back-grid
-            
-            .contact#contact
-                .container
-                    .contact-top
-                        h3 Get in Touch
-                        img.img-responsive.line-grid(src="img/li-1.png", alt="")
-                        p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <b>incididunt ut labore</b> et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <b>exercitation</b>.
-                    form
-                        .contact-grid
-                            h3 FORM HERE
-            // END Contact END Content
+      // Paralax
+      //- section.parallax-container.parallax-intro
+      //-   .parallax
+      //-     img(src="img/banner.jpg", alt="Orion Banner")
+      //-   .container.center-align.white-text
+      //-     h3 Another TAGLINE
+      //-     h5.light.grey-text.text-lighten-3 Some Slogan
 
+      // Offer
+      section#offer.blue-grey.lighten-5
+        #retouch.scrollspy.offer-section.offer-section-1
+          .middle
+            img(src="img/retuch_square.png", alt="")
+          .left.title
+            .content
+              h2 Photo Retouching
+              p Wow. What a wonderful image. And look! there are even more images on the right side. Amazing. If you click below, I bet you'll get teleported to a magical land.
+              a.btn.btn-large.waves-effect.modal-trigger(href="#retouch-modal") Learn More
+          .right.right-img
+            //- img(src="img/retouch.gif")
+        #manipulation.scrollspy.offer-section.offer-section-2
+          .middle
+            img(src="img/mani_square.png", alt="")
+          .left.left-img
+            //- img(src="img/banner1.jpg")
+          .right.title
+            .content
+              h2 Photo Manipulation
+              p Wow. What a wonderful image. And look! there are even more images on the right side. Amazing. If you click below, I bet you'll get teleported to a magical land.
+              a.btn.btn-large.waves-effect.modal-trigger(href="#manipulation-modal") Learn More
+        #color.scrollspy.offer-section.offer-section-3
+          .middle
+            img(src="img/color_square.jpg", alt="")
+          .left.title
+            .content
+              h2 Photo Styling
+              p Wow. What a wonderful image. And look! there are even more images on the right side. Amazing. If you click below, I bet you'll get teleported to a magical land.
+              a.btn.btn-large.waves-effect.modal-trigger(href="#color-modal") Learn More
+          .right.right-img
+            //- img(src="img/color.gif")
+      // END Offer
 
-        .footer
-            .footer-grid-bottom
-                .container
-                    .col.m4
-                        h6 About us
-                        p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
-                        p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    .col.m4
-                        h6 Menu
-                        ul
-                            li
-                                a(href="#") Top
-                            li
-                                a(href="#") About
-                            li
-                                a(href="#") Portfolio
-            .footer-bottom
-                p.footer-class &copy; 2016 by <a href="#" target="_blank">Orion</a> 
-            script(type='text/javascript').
-                $(document).ready(function() {
-                        /*
-                        var defaults = {
-                            containerID: 'toTop', // fading element id
-                            containerHoverID: 'toTopHover', // fading element hover id
-                            scrollSpeed: 1200,
-                            easingType: 'linear' 
-                        };
-                        */
-                        
-                        $().UItoTop({ easingType: 'easeOutQuart' });
-                        
-                    });
-            a#toTop(href="#", style="display:block;")
-                span#toTopHover(style="opacity:1;")
+      // Paralax
+      //- section.parallax-container
+      //-   .parallax
+      //-     img(src="img/banner2.jpg", alt="Orion Banner")
+      //-     .container.center-align
+      //-       h3 Another TAGLINE
+      //-       h5.light.grey-text.text-lighten-3 Some Slogan
+
+      // Contact
+      section#contact.section.scrollspy
+        .container
+          .row
+            h3.center.header Get in touch
+            h6.center Let's create some magic!
+            form.col.s12
+              .row
+                .input-field.col.s6
+                  input(id="name", type="text", class="validate")
+                  label(for="name") Ihr Name
+                .input-field.col.s6
+                  input(id="mail", type="text", class="validate")
+                  label(for="mail") Ihre E-Mail Adresse
+              .row
+                .input-field.col.s12
+                  input(id="betreff", type="text", class="validate")
+                  label(for="betreff") Betreff
+              .row
+                .input-field.col.s12
+                  textarea(id="message", type="text", class="materialize-textarea validate")
+                  label(for="message") Nachricht
+              .row
+                button.btn.waves-effect.waves-light.btn-large.right(type="submit", name="action") Submit
+      // END Contact
+
+      // MODALS
+
+      // retouch modal
+      #retouch-modal.modal
+        .modal-content
+          button.right.btn-floating.btn-flat.btn-large.waves-effect.waves-light.red.modal-action.modal-close
+            i(class="large material-icons") close
+          h4 HEADER
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore eveniet mollitia placeat, esse reprehenderit nam inventore rem, cum, cupiditate perferendis nesciunt facilis ea corporis. Ab eius ea numquam praesentium, non.
+          
+      // manipulation modal
+      #manipulation-modal.modal
+        .modal-content
+          button.right.btn-floating.btn-flat.btn-large.waves-effect.waves-light.red.modal-action.modal-close
+            i(class="large material-icons") close
+          h4 HEADER
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore eveniet mollitia placeat, esse reprehenderit nam inventore rem, cum, cupiditate perferendis nesciunt facilis ea corporis. Ab eius ea numquam praesentium, non.
+
+      // Color modal
+      #color-modal.modal
+        .modal-content
+          button.right.btn-floating.btn-flat.btn-large.waves-effect.waves-light.red.modal-action.modal-close
+            i(class="large material-icons") close
+          h4 HEADER
+          p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore eveniet mollitia placeat, esse reprehenderit nam inventore rem, cum, cupiditate perferendis nesciunt facilis ea corporis. Ab eius ea numquam praesentium, non.
+          
+      // Footer
+      footer#footer.page-footer.scrollspy.white-text
+        .container
+          .row
+            .col.s12.l8
+              h6 About
+              p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptatum ipsa ratione dolore, est vel voluptatibus perspiciatis iusto repellendus nam ipsam vero pariatur, laborum dicta ullam quia quidem quam fuga!
+            .col.s12.l4
+              h6 Contact Me
+              ul
+                li
+                  a.white-text(href="#") <i class="small fa fa-behance white-text"></i>
+                li
+                  a.white-text(href="#") <i class="small fa fa-facebook white-text"></i>
+                li
+                  a.white-text(href="#") <i class="small fa fa-github white-text"></i>
+                li
+                  a.white-text(href="#") <i class="small fa fa-linkedin white-text"></i>
